# remote-control

./: README.md
controller/: settings.gradle
controller/app/: build.gradle
controller/app/src/main/: AndroidManifest.xml
controller/app/src/main/res/layout/: activity_login.xml  activity_main.xml
controller/app/src/main/res/menu/: top_menu.xml
controller/app/src/main/res/raw/: controller.properties
controller/app/src/main/res/values/: strings.xml  themes.xml
controller/app/src/main/res/values-night/: themes.xml
controller/gradle/wrapper/: gradle-wrapper.properties
doc/: design.md
puppet/: puppet.properties
puppet/src/main/cpp/: screen_helper_windows.cpp
puppet/src/main/java/cn/tomo/puppet/: Puppet.java
puppet/src/main/java/cn/tomo/puppet/common/: Command.java  Configure.java  DataPacket.java  Log.java
puppet/src/main/java/cn/tomo/puppet/handler/: AbstractHandler.java  CursorHandler.java  DesktopHandler.java  FileHandler.java  HandlerContainer.java  KeyboardHandler.java  LoginHandler.java
puppet/src/main/java/cn/tomo/puppet/netty/: ChannelHandler.java  Decoder.java  Encoder.java  NettyClient.java  Serialization.java
puppet/src/main/test/: Test.java  demo.proto
server/: CMakeLists.txt
server/include/: config.h
server/src/: main.cpp
server/src/net/: IoUring.cpp  IoUring.h
server/src/object/: Controller.cpp  Controller.h  Device.h  Puppet.cpp  Puppet.h  Sessions.h
server/src/proto/: Coder.h  DataPacket.pb.cc  DataPacket.pb.h  DataPacket.proto
server/src/thread/: SafeQueue.h  ThreadPool.h
(+44 files in other folders)
